--- a/1.html
+++ b/1.html
@@ -14,6 +14,14 @@
 </script>
 </head>
 <body>
+  <input type="button" value="night" onclick="
+  document.querySelector('body').style.backgroundColor='black';
+  document.querySelector('body').style.color='white';">
+
+  <input type="button" value="day" onclick="
+  document.querySelector('body').style.backgroundColor='white';
+  document.querySelector('body').style.color='black';">
+
   <H1><a href="index.html">WEB</a></H1>
 <ol>
   <li><a href="1.html">HTML</a></li>
