--- a/2.html
+++ b/2.html
@@ -2,40 +2,45 @@
 <html>
 <head>
 <title>WEB1 - html</title>
-<meta charset="utf-8">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137608606-1"></script>
-<script>
+  <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137608606-1"></script>
+  <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-137608606-1');
-</script>
+  </script>
+
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-  <input type="button" value="night" onclick="
-  document.querySelector('body').style.backgroundColor='black';
-  document.querySelector('body').style.color='white';">
-
-  <input type="button" value="day" onclick="
-  document.querySelector('body').style.backgroundColor='white';
-  document.querySelector('body').style.color='black';">
 
   <H1><a href="index.html">WEB</a></H1>
-<ol>
+<div id="grid">
+
+ <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
-</ol>
-<ul>
-  <li>jaeho</li>
-  <li>naru</li>
-  <li>seokchan</li>
-  <li>seyoon</li>
-</ul>
-<H2>CSS이란 무엇인가?</H2>
-<p>HTML 등의 마크업 언어로 작성된 문서가 실제로 웹사이트에 표현되는 방법을 정해주는 언어. CSS의 C가 Cascading의 약자인데, 이는 상위 요소의 스타일 속성을 자손 요소들에게 상속시켜주는 모습이 DOM 트리구조에서 마치 폭포수처럼 내려가는 모습을 닮았기 때문이다.</p>
+ </ol>
+
+ <ul>
+   <li>jaeho</li>
+   <li>naru</li>
+   <li>seokchan</li>
+   <li>seyoon</li>
+ </ul>
+
+
+ <div id="article">
+ <H2>코딩 공부하는즁</H2>
+  <p>이나루 인스타 업데이트해</p>
+ </div>
+
+</div>
+
 </body>
 </html>
