--- a/1.html
+++ b/1.html
@@ -1,47 +1,48 @@
 <!doctype html>
 <html>
-<head>
-<title>WEB1 - html</title>
-<meta charset="utf-8">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137608606-1"></script>
-<script>
+  <head>
+    <title>WEB1 - html</title>
+    <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137608606-1"></script>
+    <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-137608606-1');
-</script>
+    </script>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-  <input type="button" value="night" onclick="
-  document.querySelector('body').style.backgroundColor='black';
-  document.querySelector('body').style.color='white';">
-
-  <input type="button" value="day" onclick="
-  document.querySelector('body').style.backgroundColor='white';
-  document.querySelector('body').style.color='black';">
 
   <H1><a href="index.html">WEB</a></H1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
-<ul>
-  <li>jaeho</li>
-  <li>naru</li>
-  <li>seokchan</li>
-  <li>seyoon</li>
-</ul>
-<H2>HTML이란 무엇인가?</H2>
-<p><a href="https://www.w3.org/TR/html5"
+
+ <div id="grid">
+   <ol>
+     <li><a href="1.html">HTML</a></li>
+     <li><a href="2.html">CSS</a></li>
+     <li><a href="3.html">JavaScript</a></li>
+   </ol>
+   <ul>
+     <li>jaeho</li>
+     <li>naru</li>
+     <li>seokchan</li>
+     <li>seyoon</li>
+   </ul>
+   <div id="article">
+     <H2>HTML이란 무엇인가?</H2>
+   <p><a href="https://www.w3.org/TR/html5"
   target="_blank" title="html5 specification"> Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating web pages</strong> and <u>web</u> applications.
   Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages.
   HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-<img src="coding.jpg" width="300">
-<p style="margin-top:40px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms,
+  <img src="coding.jpg" width="300">
+  <p style="margin-top:40px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms,
   may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs,
   lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
+   </div>
+ </div>
 </body>
 </html>
