--- a/1.html
+++ b/1.html
@@ -28,9 +28,9 @@
    </ol>
    <ul>
      <li>jaeho</li>
-     <li>naru</li>
+     <li><a href="https://www.instagram.com/inaru6v6/?hl=ko">naru</a></li>
      <li>seokchan</li>
-     <li>seyoon</li>
+     <li><a href="https://www.instagram.com/inaru6v6/?hl=ko">seyoon</a></li>
    </ul>
    <div id="article">
      <H2>HTML이란 무엇인가?</H2>
