--- a/2.html
+++ b/2.html
@@ -29,9 +29,9 @@
 
  <ul>
    <li>jaeho</li>
-   <li>naru</li>
+   <li><a href="https://www.instagram.com/inaru6v6/?hl=ko">naru</a></li>
    <li>seokchan</li>
-   <li>seyoon</li>
+   <li><a href="https://www.instagram.com/inaru6v6/?hl=ko">seyoon</a></li>
  </ul>
 
 
