--- a/3.html
+++ b/3.html
@@ -36,9 +36,9 @@ document.querySelector('body').style.color = 'white';
   </ol>
   <ul>
     <li>jaeho</li>
-    <li>naru</li>
+    <li><a href="https://www.instagram.com/inaru6v6/?hl=ko">naru</a></li>
     <li>seokchan</li>
-    <li>seyoon</li>
+    <li><a href="https://www.instagram.com/inaru6v6/?hl=ko">seyoon</a></li>
   </ul>
   <div id="article">
     <H2>JavaScript란 무엇인가?</H2>
