--- a/3.html
+++ b/3.html
@@ -19,13 +19,18 @@
 <body>
   <H1><a href="index.html">WEB</a></H1>
 
+
   <input type="button" value="night" onclick="
-document.querySelector('body').style.backgroundColor = 'black';
-document.querySelector('body').style.color = 'white';
-  ">
-  <input type="button" value="day" onclick="
-  document.querySelector('body').style.backgroundColor = 'white';
-  document.querySelector('body').style.color = 'black';
+  var target = document.querySelector('body');
+  if(this.value === 'night'){
+    target.style.backgroundColor = 'black';
+    target.style.color = 'white';
+    this.value = 'day';
+  } else {
+    target.style.backgroundColor = 'white';
+    target.style.color = 'black';
+    this.value = 'night';
+  }
   ">
 
 <div id="grid">
@@ -43,7 +48,11 @@ document.querySelector('body').style.color = 'white';
   <div id="article">
     <H2>JavaScript란 무엇인가?</H2>
     <p>나무위키를 검색해보자</p>
+
+
+
   </div>
 </div>
+
 </body>
 </html>
